# ElasticRods

./: .gitignore  .gitmodules  ActuationSparsifier.hh  AutomaticDifferentiation.hh  CMakeLists.txt  ConvergenceReport.hh  CrossSection.cc  CrossSection.hh  CrossSectionMesh.hh  DeploymentPathAnalysis.hh  ElasticRod.cc  ElasticRod.hh  ElasticRodHessVec.inl  ElasticRodOutput.cc  LICENSE  LOMinAngleConstraint.hh  LinkageOptimization.cc  LinkageOptimization.hh  LinkageTerminalEdgeSensitivity.hh  PeriodicRod.hh  README.md  RectangularBox.hh  RodLinkage.cc  RodLinkage.hh  RodLinkageHessVec.inl  RodMaterial.cc  RodMaterial.hh  SparseMatrixOps.hh  TargetSurfaceFitter.cc  TargetSurfaceFitter.hh  TemplatedTypes.hh  TriDiagonalSystem.hh  VectorOperations.hh  cg_solver.hh  compute_equilibrium.hh  eigensolver.cc  eigensolver.hh  infer_target_surface.cc  infer_target_surface.hh  knitro_solver.hh  (+6 more)
cmake/: FindKnitro.cmake  FindLIBIGL.cmake  FindMeshFEM.cmake  FindSpectra.cmake
cross_sections/: Ellipse.hh  I.hh  L.hh  Plus.hh  Rectangle.hh
doc/: BendingFigure.ai  preambles.tex  single_dof_behavior.tex  structural_analysis.tex
examples/: hyperboloid_closed.msh  hyperboloid_open.msh  nonuniform_linkage.msh  run.sh  scissor_linkage.blend  sphere_open.msh
examples/actuation_sparsification/: analyze_results.py  architectural_scale_torques_14.txt  gradient.txt  half_vase_opened.msh  half_vase_rest_lengths.txt  launch.sh  linkage_0.msh  node_task.py  run.sh  target_surface_0.msh  torques_0.02_L0.125.txt
examples/cross_sections/: Ellipse.json  EllipseVertical.json  IBeam.json  L.json  PlusBeam.json  PlusBeam_0.2x0.2.json  PlusBeam_2x2.json  Plus_4x4.json  Plus_5x5.json  Rectangle.json  Rectangle_12x8.json  Rectangle_15x3.json  Rectangle_16x8.json  custom_profile.msh
examples/florin/: design_parameters.txt
experiments/sparsification/AsymetricWingsPointy/: count_nonzero.py  debug.msh  edge_rlens.txt  gradient.txt  gradient_post_open.txt  joint_len_debug.txt  ldebug_swap.msh  linkage_0.msh  out.txt  post_sparsification.msh  pre_joint_edge_rlens.txt  pre_sparsification.msh  rlens.txt  run.sh  stdout.txt  target_surface_0.msh  torques.txt  torques_4.txt  torques_5.txt  torques_6.txt
grasshopper/: CMakeLists.txt  README.md  XshellsInterface.gh  grasshopper_bindings.cc  test_linkage_initialization.gh
grasshopper/LinkageComponent/: LinkageComponent.csproj  LinkageComponent.sln  LinkageComponentComponent.cs  LinkageComponentInfo.cs  UnsafeNativeMethods.cs
grasshopper/LinkageComponent/Properties/: AssemblyInfo.cs
python/: .gdb_history  PlanarElastica.py  analysis_sweep.py  benchmark_open.py  bending_validation.py  convergence_reporting.py  deployment_path_analysis.py  deployment_plots.py  drop_animation.py  finite_diff.py  knitro_optimize.py  linkage_utils.py  linkage_vis.py  mesh_vis.py  open_linkage.py  quad_to_line.py  structural_analysis.py  write_render_files.py
python/Demos/: BendingValidation.ipynb  EtienneHyperboloidPlus.ipynb  EtienneHyperboloidRectangle.ipynb  FourPtBendingValidation.ipynb  MantaRayDemo.ipynb  MiniXshell_13_burd_OPT.ipynb  RodDemo.ipynb  RodFiniteDifferenceValidation.ipynb  RodVibrationalModes.ipynb  SourceFrameDemo.ipynb  TestPeriodicRod.ipynb
python/MeshFEM/: __init__.py
python/Miscellaneous/: 2AsymmBumpsVeryNice.ipynb  2Layer2Bump.ipynb  4Bumps.ipynb  AsymPointy2Bumps.ipynb  AsymWingsFab.ipynb  AsymmWings2.ipynb  AsymmWingsFab3Pointy.ipynb  AsymmWingsFabFinal1.ipynb  AsymmWingsFabFinal2.ipynb  Atrium1.ipynb  Banana.ipynb  Butt.ipynb  ButterFly.ipynb  ClosedCreasedBall.ipynb  CustomProfile.ipynb  DartVaderUntrimmed.ipynb  DarthVader.ipynb  DarthVaderFab3m.ipynb  DragonFly.ipynb  ElephantEars.ipynb  F1.ipynb  Fans.ipynb  FlorinExample.ipynb  HalfVase.ipynb  Hole.ipynb  HourGlass.ipynb  LeggedPavilion.ipynb  MantaRay.ipynb  MinaVase.ipynb  NewGeneric.ipynb  NewGeneric2.ipynb  NewWings1.ipynb  PointyCanopy1.ipynb  PointyCanopy2.ipynb  ScaryFace.ipynb  SimpleBump.ipynb  SwimmingRay.ipynb  TheDuckV2.ipynb  hyperboloid.ipynb  restlen_meshID_1a219f3e-c853-4985-ad5f-f13b369c0e63.txt  (+2 more)
python/Pavilion/: Pavilion.ipynb  design_parameters.txt  restlen_pav_final190824__flat_opt.txt
python/XShellSiggraphAnimations/: AverageAngle.ipynb  IndefiniteFrames.ipynb  LinkageRepresentation.ipynb  RodRepresentation.ipynb
python/XShellSiggraphPaperFigures/: Fig10ForwardDesign.ipynb  Fig10ForwardDesign2.ipynb  Fig11SimpleTwoBumps.ipynb  Fig12AsymmetricWingsPointy.ipynb  Fig13Boat.ipynb  Fig14CrossSectionChange.ipynb  Fig1AsymmOverhanging2BumpsArchitecturalScale.ipynb  Fig5DarthVader.ipynb  Fig6WigglyStressVis.ipynb  Fig8AsymmetricWingsPointy.ipynb
python/examples/: 2AsymmBumpsVeryNice.ipynb  2BumpsEasyFab.ipynb  4Bumps.ipynb  AlmostSphere.ipynb  AsymClappers1.ipynb  AsymPointy2Bumps.ipynb  AsymWingsFab.ipynb  AsymmClapper2.ipynb  AsymmOverhangCustomMat.ipynb  AsymmOverhanging2Bumps.ipynb  AsymmOverhanging2Bumps_VIZ_deployment.ipynb  Banana.ipynb  Boat.ipynb  BoatImprecisionToleranceTest.ipynb  Bowtie.ipynb  ButterFly.ipynb  CesarianSection.ipynb  CustomEdgeLengths.ipynb  CustomEdgeLengths2.ipynb  DarthVader.ipynb  DarthVaderFab3m.ipynb  DarthVaderRender12m.ipynb  DebugFreeze.ipynb  DragonFly.ipynb  ElephantEars.ipynb  EtienneHyperboloidMeasured.ipynb  F1.ipynb  FlorinExample.ipynb  FlorinExamples.ipynb  ForwardDesginSim.ipynb  HalfSphere1.ipynb  HalfVase-Copy1.ipynb  HeadLessDuck.ipynb  HourGlass1.ipynb  LeggedPavilion.ipynb  MantaRay.ipynb  Mina_0_init2d.ipynb  MiniXshell_13_burd_OPT.ipynb  NegCRVwithBreatherHole.ipynb  NegativeCRVshowcase1.ipynb  (+53 more)
python_bindings/: CMakeLists.txt  elastic_rods.cc  visualization.hh
tests/: CMakeLists.txt  open_linkage.cc  test_actuation_sparsifier.cc  test_cg.cc  test_elastic_rod_linkage.cc  test_elastic_rods.cc  test_grasshopper_bindings.cc  test_linkage_hessian_matvec.cc  test_linkage_optimization.cc  test_rl_solve.cc  test_rod_material.cc  test_tridiagonal_system.cc
tools/: CMakeLists.txt  actuation_sparsifier.cc  analyze_rod_profile.cc  convert_rhino_profile_obj.py  open_linkage.cc  visualize_twist_deformation.cc
(+104 files in other folders)
